@@ -74,7 +74,9 @@ public class EndlessSky extends StdGrid
 		if(!super.okMessage(myHost,msg))
 			return false;
 
-		return InTheAir.isOkAirAffect(this,msg);
+		final boolean success = InTheAir.isOkAirAffect(this,msg);
+		InTheAir.airAffects(this,msg);
+		return success;
 	}
 
 	@Override
